# atlas

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260715_0001_create_users_table.py  20260716_0002_create_projects_table.py  20260716_0003_create_datasets_table.py  20260716_0004_create_dataset_profiles_table.py  20260716_0005_create_experiments_table.py  20260718_0006_create_explanations_table.py  20260719_0007_create_deployments_table.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/core/: __init__.py  config.py  security.py  storage.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/ml/: __init__.py
backend/app/models/: __init__.py  dataset.py  dataset_profile.py  deployment.py  experiment.py  explanation.py  project.py  user.py
backend/app/repositories/: __init__.py  dataset_profile_repository.py  dataset_repository.py  deployment_repository.py  experiment_repository.py  explanation_repository.py  project_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  comparison.py  dataset.py  deployment.py  experiment.py  explainability.py  health.py  profiling.py  project.py
backend/tests/: conftest.py  test_auth.py  test_comparison_api.py  test_datasets.py  test_deployments_api.py  test_experiment_runner.py  test_experiments_api.py  test_explainability_api.py  test_health.py  test_profiler.py  test_profiling_api.py  test_projects.py
(+51 files in other folders)
